# tup-rust

./: .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  FUSE_PLAN.md  PARITY_PLAN.md  PLAN.md
.claude/: settings.local.json
.github/workflows/: ci.yml
C_ANALYSIS/: data_structures.md  db.md  graph.md  parser.md  server_monitor_platform.md  tests.md  utilities.md
crates/tup-cli/: Cargo.toml
crates/tup-cli/src/: main.rs
crates/tup-cli/tests/: harness.rs  integration.rs
crates/tup-db/: Cargo.toml
crates/tup-db/src/: commands.rs  entry.rs  error.rs  ghost.rs  lib.rs  link_ops.rs  node_ops.rs  output_tracking.rs  parser_db_impl.rs  path_resolve.rs  schema.rs  sync.rs  vardb.rs  variant.rs
crates/tup-graph/: Cargo.toml
crates/tup-graph/src/: dot.rs  graph.rs  lib.rs
crates/tup-monitor/: Cargo.toml
crates/tup-monitor/src/: lib.rs  watcher.rs
crates/tup-parser/: Cargo.toml
crates/tup-parser/src/: bang.rs  errors.rs  glob.rs  lexer.rs  lib.rs  lua.rs  percent.rs  rule.rs  vardb.rs  varsed.rs
crates/tup-platform/: Cargo.toml
crates/tup-platform/src/: flock.rs  init.rs  lib.rs  options.rs  platform.rs  scanner.rs
crates/tup-server/: Cargo.toml  build.rs
crates/tup-server/csrc/: ldpreload.c  tup_depfile.h
crates/tup-server/src/: depfile.rs  file_db.rs  fuse_mount.rs  fuse_server.rs  ldpreload.rs  lib.rs  master_fork.rs  process.rs  tup_fuse.rs
crates/tup-types/: Cargo.toml
crates/tup-types/src/: access_event.rs  constants.rs  error.rs  flags.rs  lib.rs  link_type.rs  node_type.rs  parser_db.rs  percent.rs  tupid.rs
crates/tup-updater/: Cargo.toml
crates/tup-updater/src/: ccache.rs  executor.rs  incremental.rs  lib.rs  outputs.rs  progress.rs
tests/compat/: run_tests.sh
tests/compat/tests/: t8011-variant-extra-tupconfig.sh
