[workspace]
members = [
    "crates/tup-types",
    "crates/tup-db",
    "crates/tup-graph",
    "crates/tup-parser",
    "crates/tup-updater",
    "crates/tup-monitor",
    "crates/tup-server",
    "crates/tup-platform",
    "crates/tup-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
repository = "https://github.com/petemoore/tup-rust"
description = "Rust port of the tup build system"

[workspace.dependencies]
# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Pattern matching
regex = "1"

# Lua integration
mlua = { version = "0.9", features = ["lua54", "vendored"] }

# File system monitoring
notify = "6"

# FUSE
# fuser = "0.14"  # Enable when FUSE support is implemented

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Serialization (for config/options)
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Concurrency
crossbeam = "0.8"
rayon = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Testing
tempfile = "3"
assert_cmd = "2"
predicates = "3"
