[package]
name = "tup-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Platform abstraction layer for tup build system"

[dependencies]
tup-types = { path = "../tup-types" }
tup-db = { path = "../tup-db" }
anyhow = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
